Network interfaces information

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
     </div>
     
+    <h2>Network Interfaces</h2>
+    <hr>
+    <div id="network"class="component">
+
+
+    </div>
+
   </div>
 
 
