--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     </div>
-    
+
     <h2>Network Interfaces</h2>
     <hr>
     <div id="network"class="component">
@@ -32,6 +32,12 @@
 
     </div>
 
+    <h2>User Information</h2>
+    <hr>
+    <div id="user"class="component">
+
+
+    </div>
   </div>
 
 
