print button ready

--- a/index.html
+++ b/index.html
@@ -38,7 +38,19 @@
 
 
     </div>
+
   </div>
+
+  <div id="options">
+  <span>Options<span>
+    <form>
+
+      <button type="button"id="printBtn" class="btn" onclick="printInfo()"> Print </button>
+    </form>
+  </div>
+
+
+
 
 
 
