the save as pdf button works

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <form>
 
       <button type="button"id="printBtn" class="btn" onclick="printInfo()"> Print </button>
+      <button type="button"id="printBtn" class="btn" onclick="saveAsPDF()"> Save as PDF </button>
     </form>
   </div>
 
